--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    // kotlin
+    ext.kotlin_version = '1.3.20'
+
+    // core
+    ext.compile_sdk_version = 28
+    ext.min_sdk_version = 14
+    ext.target_sdk_version = 28
+    ext.library_version = '1.0.0'
+    ext.library_version_int = 100
+    ext.support_library_version = '28.0.0'
+    ext.material_version = '1.1.0-alpha03'
+    ext.appcompat_version = '1.1.0-alpha01'
+
     repositories {
         google()
         jcenter()
@@ -12,6 +24,10 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // bintray
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     }
 }
 
