--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ buildscript {
 }
 
 allprojects {
+
+    tasks.withType(Javadoc).all {
+        enabled = false
+    }
+
+
     repositories {
         google()
         jcenter()
