--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext.compile_sdk_version = 28
     ext.min_sdk_version = 14
     ext.target_sdk_version = 28
-    ext.library_version = '1.0.0'
+    ext.library_version = '1.0.1-alpha01'
     ext.library_version_int = 100
     ext.support_library_version = '28.0.0'
     ext.material_version = '1.1.0-alpha03'
